[package]
name = "vb"
version = "0.0.1"
edition = "2021"
license = "BSL-1.0"
homepage = "https://github.com/xxai-art/vb"
repository = "https://github.com/xxai-art/vb"
description = ""

[dependencies]
thiserror = "1.0.47"
vbyte = "0.1.0"

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
# strip = true
